fix nav z-index

--- a/src/styles/navbar/Nav.module.css
+++ b/src/styles/navbar/Nav.module.css
@@ -8,6 +8,7 @@ nav {
 	font-weight: 100;
 	background-color: var(--font-clr);
 	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 5px 10px rgba(0, 0, 0, 0.22);
+	z-index: 99;
 }
 .NavLink {
 	transition: color .2s, background-color .2s;
